Se pudo resolver lo del overflow dentro de un popup

--- a/Vaadin-PolymerCustomComponent-working/src/main/webapp/VAADIN/themes/mytheme/styles.scss
+++ b/Vaadin-PolymerCustomComponent-working/src/main/webapp/VAADIN/themes/mytheme/styles.scss
@@ -5,7 +5,13 @@
 // The actual styles should be defined in mytheme.scss
 
 .mytheme {
-  @include addons;
-  @include mytheme;
-
+	@include addons;
+	@include mytheme;
+	
+	.overflowy {
+		overflow: visible !important;
+		div {
+			overflow: visible;
+		}	
+	}
 }
